// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> should render correctly with error 1`] = `
<Fragment>
  <Header />
  <Error />
</Fragment>
`;

exports[`<App /> should render correctly with isLoading 1`] = `
<Fragment>
  <Header />
  <Connect(SideMenu)
    key="sideMenu"
  />
  <div
    className="app-container"
    key="appContainer"
  >
    <Loader />
  </div>
</Fragment>
`;

exports[`<App /> should render correctly without isLoading and elementInfo 1`] = `
<Fragment>
  <Header />
  <Connect(SideMenu)
    key="sideMenu"
  />
  <div
    className="app-container"
    key="appContainer"
  >
    <Connect(AddEntryComponent)
      key="addEntryComponent"
    />
    <Connect(Table)
      key="table"
    />
    <div
      className="entry-info-container"
      key="entryInfoContainer"
    />
  </div>
</Fragment>
`;

exports[`<App /> should render correctly without isLoading and with elementInfo 1`] = `
<Fragment>
  <Header />
  <Connect(SideMenu)
    key="sideMenu"
  />
  <div
    className="app-container"
    key="appContainer"
  >
    <Connect(AddEntryComponent)
      key="addEntryComponent"
    />
    <Connect(Table)
      key="table"
    />
    <div
      className="entry-info-container"
      key="entryInfoContainer"
    >
      <Connect(EntryInfo) />
    </div>
  </div>
</Fragment>
`;
